[gd_scene load_steps=21 format=3 uid="uid://w70khq1ua5pt"]

[ext_resource type="Texture2D" uid="uid://bucepb3oy8gmh" path="res://assets/images/events/minigameTitle.png" id="1_65cok"]
[ext_resource type="Script" uid="uid://bhvlbwjebxskt" path="res://technical/events/targetpractice.gd" id="1_lidgy"]
[ext_resource type="Texture2D" uid="uid://sn2vh6yb4153" path="res://assets/images/events/filledStar.png" id="2_p2mlb"]
[ext_resource type="Texture2D" uid="uid://bsjnsxl2xs2j0" path="res://assets/images/events/unfilledStar0.png" id="3_8xg61"]
[ext_resource type="Texture2D" uid="uid://n4fjjq8ir18y" path="res://assets/images/events/unfilledStar1.png" id="4_y1xg5"]
[ext_resource type="AudioStream" uid="uid://doov5lqi3y5cd" path="res://assets/sounds/fuckyeah.ogg" id="5_0jnyw"]
[ext_resource type="Texture2D" uid="uid://6nno2cik65i4" path="res://assets/images/events/fuckYeah.png" id="6_4th1x"]
[ext_resource type="Texture2D" uid="uid://sreloa61wfs3" path="res://assets/images/events/target practice/paper.png" id="7_lidgy"]
[ext_resource type="Texture2D" uid="uid://5ernotw46ogg" path="res://assets/images/events/target practice/thesky.png" id="9_ijknf"]
[ext_resource type="Texture2D" uid="uid://clohleb4vp4w4" path="res://assets/images/events/target practice/clouds.png" id="10_7cfgx"]
[ext_resource type="Texture2D" uid="uid://e6y1i5e0hw72" path="res://assets/images/events/target practice/ground2.png" id="11_x27s5"]
[ext_resource type="Texture2D" uid="uid://cfd1npxpt6jm3" path="res://assets/images/events/target practice/ground1.png" id="12_yc80c"]
[ext_resource type="Texture2D" uid="uid://crwa1fn33b2sp" path="res://assets/images/events/target practice/fore.png" id="13_g6ecl"]
[ext_resource type="AudioStream" uid="uid://cahd8n2qup8t6" path="res://assets/music/roshambo.ogg" id="14_ijknf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ijknf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_p2mlb")
}],
"loop": true,
"name": &"star",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8xg61")
}, {
"duration": 1.0,
"texture": ExtResource("4_y1xg5")
}],
"loop": false,
"name": &"unstar",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_djedu"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("opening/minigameLogo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(565, 993)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("opening/Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-9, 900)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("opening/Star1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(456, 128)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("opening/Star1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("opening/fuckYeah:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 900)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("opening/paper:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 1000)]
}

[sub_resource type="Animation" id="Animation_e3o1v"]
resource_name = "pop"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("opening/minigameLogo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(0.420448, 1, 2, 1),
"update": 0,
"values": [Vector2(565, 993), Vector2(565, 324), Vector2(565, 324), Vector2(565, -345)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0.607843)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("opening/paper:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 5),
"transitions": PackedFloat32Array(0.297302, 1),
"update": 0,
"values": [Vector2(576, 1000), Vector2(576, 324)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_itsToSIGN"
}]
}

[sub_resource type="Animation" id="Animation_fcjxb"]
resource_name = "title"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("opening/Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(0.450625, 1, 0.420448, 1),
"update": 0,
"values": [Vector2(-9, 900), Vector2(-9, 285), Vector2(-9, 285), Vector2(-9, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.63333, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.607843), Color(0, 0, 0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_allowToMove"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("opening/Star1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3, 3.5),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(456, 128), Vector2(456, 104)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("opening/Star2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.1, 3.6),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(515, 128), Vector2(515, 104)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("opening/Star3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3.2, 3.7),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(574, 128), Vector2(574, 104)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("opening/Star4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3.3, 3.8),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(633, 128), Vector2(633, 104)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("opening/Star5:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3.4, 3.9),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(692, 128), Vector2(692, 104)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("opening/Star1:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(3, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("opening/Star2:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(3.1, 3.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("opening/Star3:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(3.2, 3.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("opening/Star4:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(3.3, 3.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("opening/Star5:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(3.4, 3.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("opening/paper:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(2.14355, 1),
"update": 0,
"values": [Vector2(576, 324), Vector2(576, 1000)]
}

[sub_resource type="Animation" id="Animation_tlkvl"]
resource_name = "yes"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_endEvent"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/fuckYeah:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.353553, 1),
"update": 0,
"values": [Vector2(576, 900), Vector2(576, 324)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iiqyl"]
_data = {
&"RESET": SubResource("Animation_djedu"),
&"pop": SubResource("Animation_e3o1v"),
&"title": SubResource("Animation_fcjxb"),
&"yes": SubResource("Animation_tlkvl")
}

[node name="Targetpractice" type="Node2D"]
script = ExtResource("1_lidgy")

[node name="opening" type="Node2D" parent="."]
z_index = 30

[node name="ColorRect" type="ColorRect" parent="opening"]
offset_right = 1162.0
offset_bottom = 652.0
color = Color(0, 0, 0, 1)

[node name="minigameLogo" type="Sprite2D" parent="opening"]
position = Vector2(565, 993)
texture = ExtResource("1_65cok")

[node name="Label" type="Label" parent="opening"]
offset_left = -9.0
offset_top = 900.0
offset_right = 1152.0
offset_bottom = 969.0
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Shoot! Shoot!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Star1" type="AnimatedSprite2D" parent="opening"]
modulate = Color(1, 1, 1, 0)
position = Vector2(456, 128)
sprite_frames = SubResource("SpriteFrames_ijknf")
animation = &"star"

[node name="Star2" type="AnimatedSprite2D" parent="opening"]
position = Vector2(515, 104)
sprite_frames = SubResource("SpriteFrames_ijknf")
animation = &"star"

[node name="Star3" type="AnimatedSprite2D" parent="opening"]
position = Vector2(574, 104)
sprite_frames = SubResource("SpriteFrames_ijknf")
animation = &"star"

[node name="Star4" type="AnimatedSprite2D" parent="opening"]
position = Vector2(633, 104)
sprite_frames = SubResource("SpriteFrames_ijknf")
animation = &"star"

[node name="Star5" type="AnimatedSprite2D" parent="opening"]
position = Vector2(692, 104)
sprite_frames = SubResource("SpriteFrames_ijknf")
animation = &"star"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="opening"]
stream = ExtResource("5_0jnyw")

[node name="fuckYeah" type="Sprite2D" parent="opening"]
position = Vector2(576, 900)
texture = ExtResource("6_4th1x")

[node name="paper" type="Sprite2D" parent="opening"]
position = Vector2(576, 1000)
texture = ExtResource("7_lidgy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iiqyl")
}

[node name="thesky" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("9_ijknf")

[node name="clouds" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("10_7cfgx")

[node name="ground2" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("11_x27s5")

[node name="ground1" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("12_yc80c")

[node name="fore" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("13_g6ecl")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_ijknf")
autoplay = true
parameters/looping = true
